--- a/bibleApp.css
+++ b/bibleApp.css
@@ -63,6 +63,7 @@
     --black:black;
     --blue:blue;
     --brown:brown;
+    --whitish_noteContextMenu: rgb(252, 252, 252);
 }
 ::selection {
     background-color: var(--selection);
@@ -167,7 +168,7 @@ code{position: relative; padding-top: 5px;}
 }
 .crossrefs{
     padding: 5px 5px 0 5px;
-    background: var( --white);
+    background: var(--whitesmoke);
     overflow: hidden;
     font-size: var(--fontsize-main);
     transition: max-height .2s ease-in-out;
@@ -222,7 +223,7 @@ code{position: relative; padding-top: 5px;}
     cursor: pointer;
 }
 .text_content #context_menu{
-    background: var(--ref-img);
+    background: var(--whitish_noteContextMenu);
     /* color: var(--white); */
 }
 .text_content span[ref]:hover{
@@ -373,9 +374,7 @@ button {
     position: absolute;
     background: var(--whitesmoke);
     width: 400px;
-    /* min-width: 400px; */
-    /* max-width: 600px; */
-    /* max-width: 525px; */
+    max-width: 100%;
     max-height: 80vh;
     overflow-y: scroll;
     padding: 5px;
@@ -421,6 +420,10 @@ button {
     box-shadow: 0px -21.5px 13px 28px var(--scroll-track-bg-color);
     z-index: 3;
 }
+.verse_note #context_menu .cmtitlebar{
+    box-shadow: 0px -26.5px 8px 17px var(--scroll-track-bg-color);
+}
+
 #context_menu .cmtitlebar::before {
     position: absolute;
     content: '';
@@ -1069,7 +1072,7 @@ span.vmultiple.noted code #verse_notes_button {
     font-size: 12px;
 }
 #titlebarsearchparameters > *{
-    font-size: 1.75em;
+    font-size: 1.2em;
 }
 
 /* AVAILABLE NOTES */
