--- a/bibleApp.css
+++ b/bibleApp.css
@@ -508,6 +508,7 @@ button:not(:disabled):hover {
 span.verse:hover:not(.vhlt),
 span.vmultiple:hover {
     transition: background 0.05s linear;
+    border-radius: 0.25em;
 }
 span.verse:hover:not(.vhlt){
     background-color: var(--verse-hover);
@@ -516,21 +517,22 @@ span.verse:hover:not(.vhlt){
 span.vmultiple:hover{
     background-color: var(--vmultiple-hover);
     background-color: var(--verse-hover);
-    background-color: var(--whitesmoke);
     background-color: var(--span-hover);
+    background-color: var(--vhlt);
+    background-color: var(--whitesmoke);
     transition: box-shadow 0.05s linear;
     /* box-shadow: inset 1px 2.5px 3px -2px var(--shadow-color),
     inset 3px -3px 1.5px -1px var(--shadow-color)!important; */
     box-shadow: inset 0px 0px 5px 1px var(--shadow-color)!important;
     z-index: 99;
-    transition: 500ms;
+    transition: 250ms;
 }
 span[class^=v_]:hover {
     /* background-color: var(--span-hover)!important; */
     background-color: var(--vhlt3)!important;
     box-shadow: 2px 2px 4px -2px var(--shadow-color),-2px -2px 4px -2px var(--shadow-color),2px 2px 4px -2px var(--shadow-color),-2px -2px 4px -2px var(--shadow-color)!important; 
     z-index:1;
-    transition: 500ms;
+    transition: 250ms;
 }
 span.translated:hover {
     border-bottom: 1px solid var(--span-trans-hover);
@@ -547,7 +549,7 @@ span.translated:hover {
     background-color: var(--whitesmoke);
     box-shadow: inset 2px 0px 0px 0px var(--grey),
     inset -2px 0px 0px 0px var(--grey);
-    transition: 500ms;
+    transition: 250ms;
 }
 
 sup {
