--- a/bibleApp.css
+++ b/bibleApp.css
@@ -1,6 +1,7 @@
 :root {
     --fontsize-main: 15px;
     --fontsize-refnsearch: 30px;
+    --fontsize-versionsbuttons: 20px;
     --fontsize-scripture-nav: 15px;
     --fontsize-scripture: 13px;
     --fontsize-ref: 8px;
@@ -580,15 +581,16 @@ sup {
     border-collapse:collapse;
     border-spacing: 0;
 }
-#eng2grk_sup_table td {
-    min-width:90px;
-    text-align: right;
-}
 #eng2grk_sup_table button {
     width:100%;
     min-height:55px;
     text-transform: lowercase;
     font-weight:bold;
+}
+#bibleapp_cache td:first-child {
+    width: 125px;
+    text-align: right;
+    padding-right: 10px;
 }
 .strnum:after {
     content: attr(data-lemma);
@@ -771,7 +773,7 @@ details[open] > summary > div:first-of-type {
     border-collapse:collapse;
 }
 #cache_table td{min-width:40px;}
-#cache_table td button{min-width: 100%;font-weight: bolder;}
+#cache_table td button{min-width: 100%;font-weight: bolder;font-size: 200%!important;padding: 0;}
 #hidestrongshighlight {display: none;}
 #strongsdefinitionwindow {
     min-width: 400px;
@@ -1127,7 +1129,7 @@ span.vmultiple.noted code #verse_notes_button {
     overflow: hidden;
     text-overflow: ellipsis;
     font-weight:bold;
-    font-size: calc(var(--fontsize-refnsearch) * 0.9);
+    font-size: var(--fontsize-versionsbuttons);
 }
 
 /* SEARCH PARAMETERS */
