--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -101,6 +101,12 @@
         order: -1;
         flex-basis: 100%;
     }
+    #topbartogglebtn {
+        scale: 2;
+        right: 1em;
+        top: 110%;
+        /* top: 90vh; */
+    }
 }
 @media screen and (max-device-width: 400px) {
      :root {
