--- a/page2_versenotes.css
+++ b/page2_versenotes.css
@@ -9,12 +9,14 @@ body * {
     box-sizing: border-box;
 }
 #col1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
     font-size: 0.8em;
     /* min-width: fit-content; */
     /* max-width: 200px; */
     height: 100%;
     border-right: 2px solid black;
-    overflow-y: scroll;
 }
 #col2 {
     height: 100%;
@@ -22,6 +24,10 @@ body * {
     width: 100%;
     position: relative;
     overflow-y: auto;
+    margin-bottom: 100px;
+}
+#available_notes img{
+    width: 20px;
 }
 #bibleapp_available_notes {
     min-width: 0px!important;
@@ -128,4 +134,88 @@ blockquote:first-child{
     font-family: 'Lucida Sans';
     color: maroon;
     font-style:italic;
+}
+/* TOP-BAR TOGGLE BUTTON */
+#sidebar_togglebtn {
+    position:absolute;
+    /* bottom:0; */
+    top: 40px;
+    left:100%;
+/*  right: 10px; */
+    width: 3rem;
+    height: 4rem;
+    background: var(--ref-img);
+    border-radius: 0 0 0.2em 0.2em;
+    box-shadow: 0 0 2.75px 0.05em darkgrey;
+    opacity: 0.3;
+    transition: all 0.2s ease;
+    z-index: 99;
+    scale: 0.75;
+}
+#sidebar_togglebtn:hover {
+    opacity: 1;
+    transition: all 0.2s ease;
+}
+#sidebar_togglebtn span {
+    top: 1.5rem;
+    position: absolute;
+    width: 0.3rem;
+    height: 2.5rem;
+    background-color: var(--black);
+    display: inline-block;
+    transition: all 0.2s ease;
+}
+#sidebar_togglebtn.active_button span:first-of-type {
+    transform: rotate(-45deg);
+}
+#sidebar_togglebtn span:first-of-type {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+#sidebar_togglebtn.active_button span:last-of-type {
+    transform: rotate(45deg);
+}
+#sidebar_togglebtn span:last-of-type {
+    top: 0;
+    transform: rotate(-45deg);
+}
+/* DARKMODE */
+body.darkmode {
+    background: rgb(19, 24, 24);
+    color: white;
+}
+body.darkmode summary{
+    background: rgb(0, 0, 0)!important;
+    color: white!important;
+    box-shadow: 0px 2px whitesmoke!important;
+}
+body.darkmode details {
+    background: rgb(8, 14, 14);
+    color: white;
+}
+body.darkmode blockquote {
+    background: rgb(19, 24, 24);
+    color: rgb(222, 0, 222);
+}
+body.darkmode span[ref], body.darkmode .strnum {
+    border-bottom: 1px solid rgb(222, 0, 222) !important;
+}
+body.darkmode #context_menu {
+    background: rgb(19, 24, 24);
+    border: 0.5px solid grey!important;
+    box-shadow: 2px 2px 2px 5px whitesmoke!important;
+}
+body.darkmode details > summary > div:first-of-type {
+    background-color: whitesmoke;
+    border: 2px solid whitesmoke!important;
+}
+body.darkmode .cmtitlebar,
+body.darkmode .cmtitlebar.cmtitlebar::before  {
+    background: black!important;
+    box-shadow: 0px 2px whitesmoke!important;
+}
+body.darkmode #darkmode_btn, body.darkmode #available_notes {
+    background: black!important;
+    box-shadow: 0px 0px 0px 1px grey!important;
+    color: whitesmoke;
 }
