--- a/bibleApp.css
+++ b/bibleApp.css
@@ -688,6 +688,15 @@ sup {
     font-weight: bold;
     text-align: center;
 }
+#searchprametersbtnholder {
+    display: flex;
+    flex-wrap: nowrap;
+    /* width: 500px; */
+}
+#searchprametersbtnholder>button {
+    font-size: 13px;
+    width: auto;
+}
 .bible_versions_heading{
     box-shadow: 0 0.5px 0 var(--shadow-color);
     background-color: var(--whitesmoke);
@@ -710,8 +719,7 @@ sup {
 }
 
 #strongsdefinitionwindow details, details {
-    /* border: 1px solid #aaa; */
-    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
     border-radius: 4px;
     padding: .5em .5em 0;
     z-index: -10;
@@ -750,14 +758,24 @@ sup {
     margin: 10px;
 }
 
-#strongsdefinitionwindow details[open], details[open] {
-    /* background-color:#cbff7d24; */
-}
-
-#strongsdefinitionwindow details[open] > summary, details[open] summary {
+/* #strongsdefinitionwindow details[open],
+details[open] {
+    background-color:#cbff7d24;
+} */
+#strongsdefinitionwindow details[open] > summary,
+details[open] summary {
     /* background-color:#fdff7f25; */
     border-bottom: 1px solid #aaa;
     margin-bottom: .5em;
+}
+
+#strongsdefinitionwindow details[open] > summary {
+    margin: 0;
+    width: 400px;
+}
+#strongsdefinitionwindow details > summary {
+    margin: 0;
+    width: 400px;
 }
 
 #strongsdefinitionwindow details[open] > summary > div:first-of-type,
@@ -806,7 +824,7 @@ details[open] > summary > div:first-of-type {
 #cache_table td button{min-width: 100%;font-weight: bolder;font-size: 200%!important;padding: 0;}
 #hidestrongshighlight {display: none;}
 #strongsdefinitionwindow {
-    min-width: 400px;
+    /* min-width: 400px; */
     font-size: var(--fontsize-scripture);
 }
 #strongsdefinitionwindow::after {
@@ -817,9 +835,14 @@ details[open] > summary > div:first-of-type {
 }
 #searchPreviewWindowFixed,
 #strongsdefinitionwindow{
-    min-width: 300px;
-    max-width: 600px;
+    max-width: 400px;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
+/* #strongsdefinitionwindow details.strngsdefinition {
+    max-width: 400px;
+} */
 #resizerdiv {
     background-color: var(--grey);
     /* background-color: #70707072; */
@@ -856,7 +879,8 @@ details[open] > summary > div:first-of-type {
     margin-bottom: 10px;
 }
 #searchPreviewWindowFixed.slidein{
-    display: flex!important;;
+    display: flex!important;
+    overflow-y: scroll;
 }
 #searchPreviewWindowFixed {
     position: relative;
@@ -866,6 +890,7 @@ details[open] > summary > div:first-of-type {
     padding-bottom: 7px;
     margin-bottom: 7px;
     height: 100%;
+    width: 400px;
 }
 #searchparameters div:last-child {
     display: block;
@@ -878,16 +903,16 @@ details[open] > summary > div:first-of-type {
     display: block;
     border-top: 1.1px solid var(--scroll-track-bg-color);
 }
-#hidesearchparameters {
-    padding: 0;
-    margin-top: -2px;
+#hidesearchparameters, #showonlysearchinput {
     float: right;
-    border: 1px solid var(--scroll-track-bg-color);
     background-color: var(--white);
+    min-width: calc(var(--fontsize-refnsearch) * 2.5);
+    border: 1px solid var(--scroll-track-bg-color);
     cursor: pointer;
-    height: 15px;
 }
-.hidesearchparameters>*:not(div) {
+.hidesearchparameters>*:not(div),
+.hidesearchparameters #searchprametersbtnholder,
+.hidesearchparameters #searchdiv_fixed {
     display: none !important;
 }
 #searchPreviewFixed {
@@ -909,7 +934,18 @@ details[open] > summary > div:first-of-type {
 #searchPreviewFixed .chptheading+.verse {
     margin-top: 5px;
 }
-
+#searchdiv_fixed {
+    display: flex;
+    width: 100%;
+}
+input#wordsearch_fixed {
+    width: 100%;
+    height: auto;
+}
+button#forwordsearch_fixed {
+    width: 50px;
+    height: 25px;
+}
 
 
 ::-webkit-scrollbar {
@@ -1128,7 +1164,7 @@ span.vmultiple.noted code #verse_notes_button {
 #refdiv input{
     font-size: calc(var(--fontsize-refnsearch)*1.5);
 }
-#refdiv button, #searchdiv button, #togglenavbtn {
+#refdiv button, #searchdiv button, #togglenavbtn, #forwordsearch_fixed {
     display: flex;
     align-items: center;
     padding: 2px;
@@ -1253,7 +1289,7 @@ span.vmultiple.noted code #verse_notes_button {
     font-size: calc(var(--fontsize-refnsearch) * 2.3)!important;
     font-weight: 400;
     width: var(--width-sidebuttons)!important;
-    min-width: var(--width-sidebuttons)!important;
+    min-width: 45px!important;
 }
 #togglenavbtn img {
     width: calc(var(--fontsize-refnsearch) * 2)!important;
