--- a/page2_versenotes.css
+++ b/page2_versenotes.css
@@ -255,8 +255,8 @@ body.darkmode #sidebar_togglebtn span {
     }
     details b {
         display: block;
-        font-size: 1.5em!important;
-        margin-top: -0.5em;
+        /* font-size: 1.5em!important; */
+        margin-top: -1em;
         border-bottom: 1px solid grey;
     }
 }
