--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -8,7 +8,6 @@
     #searchdiv input {
         width: 100%;
         min-width: 150px!important;
-        color: transparent;
     }
     #searchdiv {
         display: inline-grid!important;
@@ -41,13 +40,13 @@
     #togglenavbtn::before {
         font-size: 50px;
     }
-    #refnav #app_settings>button {
-        /* font-size: 35.5px; */
-        /* overflow: hidden; */
-        /* width: 60px!important;
-        min-width: 60px; */
-        /* padding: 8px 2px; */
-    }
+    /* #refnav #app_settings>button {
+        font-size: 35.5px;
+        overflow: hidden;
+        width: 60px!important;
+        min-width: 60px;
+        padding: 8px 2px;
+    } */
 }
 @media screen and (max-device-width: 540px) {
      :root {
