--- a/bibleApp.css
+++ b/bibleApp.css
@@ -196,6 +196,7 @@ code{position: relative; padding-top: 5px;}
 }
 #verse_note{display: none; position: relative;}
 .verse_note {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -1374,16 +1375,18 @@ button .checkboxreplacement:has(input[type="checkbox"]:checked):before {
 } */
 
 /* CLOSE BUTTON FOR VERSENOTE */
-.verse_note:after {
+.note_closebtn {
     content: "";
     background: url(images/cancel-svgrepo-com.svg) center no-repeat;
+    background-color: whitesmoke;
     display: block;
     position: absolute;
     width: 1em;
     height: 1em;
+    top: 0;
     right: 0;
-    border: 1px solid grey;
-    border-radius: 0.2em;
+    /* border: 1px solid grey; */
+    /* border-radius: 0.2em; */
 }
 input:focus {
     outline: none;
