--- a/bibleApp.css
+++ b/bibleApp.css
@@ -693,7 +693,7 @@ sup {
 #searchprametersbtnholder {
     display: flex;
     flex-wrap: nowrap;
-    /* width: 500px; */
+    margin-top: 0.5px;
 }
 #searchprametersbtnholder>button {
     font-size: 13px;
@@ -840,7 +840,7 @@ details[open] > summary > div:first-of-type {
     max-width: 400px;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 }
 /* #strongsdefinitionwindow details.strngsdefinition {
     max-width: 400px;
@@ -877,12 +877,12 @@ details[open] > summary > div:first-of-type {
     padding-bottom: 0;
     margin-bottom: 0;
 }
-.strngsdefinition {
-    margin-bottom: 10px;
+.strngsdefinition p {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 #searchPreviewWindowFixed.slidein{
     display: flex!important;
-    overflow-y: scroll;
 }
 #searchPreviewWindowFixed {
     position: relative;
@@ -905,12 +905,23 @@ details[open] > summary > div:first-of-type {
     display: block;
     border-top: 1.1px solid var(--scroll-track-bg-color);
 }
+#searchparametertitlebar_holder{
+    display: flex;
+}
+#searchparametertitlebar {
+    cursor: pointer;
+    height: 1.8em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 #hidesearchparameters, #showonlysearchinput {
-    float: right;
-    background-color: var(--white);
+    background-color: var(--whitesmoke);
     min-width: calc(var(--fontsize-refnsearch) * 2.5);
     border: 1px solid var(--scroll-track-bg-color);
     cursor: pointer;
+    font-weight:900;
 }
 .hidesearchparameters>*:not(div),
 .hidesearchparameters #searchprametersbtnholder,
@@ -943,12 +954,20 @@ details[open] > summary > div:first-of-type {
 input#wordsearch_fixed {
     width: 100%;
     height: auto;
+    border: none;
 }
-button#forwordsearch_fixed {
-    width: 50px;
-    height: 25px;
+#forwordsearch_fixed:disabled, #forwordsearch_fixed:not(:disabled), #hidesearchparameters {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
-
+input#wordsearch_fixed {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: ;
+}
+#searchPreviewWindowFixed button {
+    border: 1px solid rgb(198, 198, 198);
+}
 
 ::-webkit-scrollbar {
     width: 7.5px;
@@ -1346,9 +1365,6 @@ button .checkboxreplacement:has(input[type="checkbox"]:checked):before {
     background: url(images/check-box-svgrepo-com.svg) center no-repeat;
     background-color: var(--chpt);
 }
-#searchparametertitlebar {
-    cursor: pointer;
-}
 #sidemenubtn_rightbottom {
     opacity: 0.5;
     width: 2em;
@@ -1375,19 +1391,64 @@ button .checkboxreplacement:has(input[type="checkbox"]:checked):before {
 } */
 
 /* CLOSE BUTTON FOR VERSENOTE */
-.note_closebtn {
+.closebtn, .note_closebtn {
     content: "";
     background: url(images/cancel-svgrepo-com.svg) center no-repeat;
-    background-color: whitesmoke;
+    background-color: transparent;
     display: block;
     position: absolute;
     width: 1em;
     height: 1em;
     top: 0;
     right: 0;
-    /* border: 1px solid grey; */
+    border: none;
     /* border-radius: 0.2em; */
+    z-index: 10;
+    transition: all 0.3s ease-in-out;
+}
+.closebtn.cmenu_closebtn:hover {
+    background: url(images/cancel-svgrepo-com-BLACK.svg) center no-repeat;
+    background-color: transparent!important;
+    box-shadow: 0px 0px 0px 1px rgba(155, 0, 0, 0.281)!important;
+    border-radius: 0.2em;
+    transition: all 0.3s ease-in-out;
+}
+.closebtn.cmenu_closebtn:active {
+    box-shadow: 0px 0px 0px 1px rgba(155, 0, 0, 0.589)!important;
+    border-radius: 0.2em;
+    transition: all 0.3s ease-in-out;
 }
 input:focus {
     outline: none;
+}
+
+#strongsdefinitionwindow {
+    display: flex;
+    flex-direction: column;
+}
+#strongsnum_inputholder {
+    display: flex;
+    align-items: stretch;
+}
+#strongsnum_inputholder #strongsnum_input {
+    width: 100%;
+    height: auto;
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+    border: none;
+    box-shadow: inset 0px 0px 0px 0.5px var(--grey);
+}
+#strongsnum_inputholder #strongsnum_srchbtn {
+    width: 50px;
+    display: flex;
+    align-items: stretch;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+}
+#strongsnum_inputholder #strongsnum_srchbtn img {
+    scale: 0.6;
+}
+#strongsdefinitionwindow #strongsdefinition_text {
+    overflow-x: hidden;
+    overflow-y: auto;
 }
